fix view on mobiles

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -7,4 +7,5 @@
     align-items: center;
     margin: 5px 5px 0 0;
     margin-top: 15px;
+    min-height: 300px;
 }
